--- a/Index_back.html
+++ b/Index_back.html
@@ -50,7 +50,7 @@
     <div class="menu">
         <a href="CrazyEffects.html">Crazy Effects</a>
         <a href="Hacker.html">Hacker Mode</a>
-        <a href="">Este enlace está en mantenimiento</a>
+        <!--><a href="">Este enlace está en mantenimiento</a>-->
     </div>
 </body>
 </html>
