--- a/Index_back.html
+++ b/Index_back.html
@@ -52,5 +52,9 @@
         <a href="Hacker.html">Hacker Mode</a>
         <!--><a href="">Este enlace está en mantenimiento</a>-->
     </div>
+    <script>
+        function changeBackgroundColor(){
+            document.body.style.background = 'linear-gradient(135deg. #8B0000, #ff4500)';
+    </script>
 </body>
 </html>
